<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/receipt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_title_label"/>

    <TextView
        android:id="@+id/receipt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt_name_label"/>

    <TextView
        android:id="@+id/receipt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_title"/>


</LinearLayout>